[package]
name = "dieselproblems"
version = "0.1.0"
authors = ["Adam Chalmers <achalmers@cloudflare.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
